fix typo so swagger.json can obtain information from package.json
